feat: replace GitHub and Lovable images with Unsplash images
This commit updates all project images to use Unsplash for better
reliability and professional appearance. The changes include:

- Update public/projects.json: Replace raw.githubusercontent.com image
  URLs with Unsplash images for both CoMapeo projects
- Update index.html: Replace Lovable opengraph images with Unsplash
- Update e2e/projects.spec.ts: Update test assertion to check for
  unsplash.com instead of logo.png
- Add docs/UNSPLASH_IMAGE_UPDATES.md: Document all changes and note
  which GitHub issues need to be updated (#2 and #3)

Updated projects:
- Issue #2: CoMapeo Config Spreadsheet Plugin
- Issue #3: CoMapeo Documentation

GitHub issues to update: #2, #3 (see documentation for details)

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Awana Labs - Open Source Projects" />
     <meta property="og:description" content="Building the future of digital infrastructure with open source tools, libraries, and frameworks." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=1200&h=630&fit=crop" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@AwanaLabs" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=1200&h=630&fit=crop" />
   </head>
 
   <body>
